--- a/src/index.css
+++ b/src/index.css
@@ -102,7 +102,7 @@ body {
 .contain-radio {
   position: relative;
   padding-left: 35px;
-  margin-bottom: 12px;
+  margin-bottom: 0px;
   padding-top: 4px;
   cursor: pointer;
   -webkit-user-select: none;
@@ -125,7 +125,7 @@ body {
 .contain-radio .circle:after {
   left: 4px;
   top: 4px;
-  @apply w-3 h-3 rounded-full bg-zinc-800;
+  @apply w-3 h-3 rounded-full bg-[#017297];
 }
 .contain-radio input:checked ~ .circle:after {
   display: block;
@@ -154,7 +154,7 @@ body {
   height: 20px;
   width: 20px;
   border-radius: 50%;
-  border: 1px solid #01c38d;
+  border: 1px solid #017297;
   background-color: #fff;
 }
 
@@ -187,7 +187,7 @@ body {
   width: 10px;
   height: 10px;
   border-radius: 50%;
-  background: #01c38d;
+  background: #017297;
 }
 .hide-scroll::-moz-scrollbar {
   display: none;
