--- a/src/index.css
+++ b/src/index.css
@@ -477,3 +477,14 @@ label.label input[type="file"] {
 @import "tailwindcss/components";
 
 @import "tailwindcss/utilities";
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
