--- a/src/index.css
+++ b/src/index.css
@@ -488,3 +488,14 @@ input::-webkit-inner-spin-button {
 input[type=number] {
   -moz-appearance: textfield;
 }
+
+.card {
+  transform: translateY(200px);
+  opacity: 0;
+  transition: 200ms;
+}
+
+.card.show {
+  transform:translateY(0);
+  opacity: 1;
+}
